Fixed alignment of filter-sort

--- a/search-results.css
+++ b/search-results.css
@@ -11,7 +11,10 @@ hr {
 input[type=search]:focus, button[type="button"]:focus {
   box-shadow: none;
 }
+.filter-sort button{
+  padding: 0.375rem 0rem;
 
+}
 
 /* end of styles for searchbar*/
 
